welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: reassignment to val
if ((negative=true && a<0 && b<0) || (negative=false && (a<0 && b>0) || (a>0 && b<0)))
             ^